# OOP_LAB_7

./: .gitignore  CMakeLists.txt  README.md
include/: bull.h  dragon.h  factory.h  npc.h  observer.h  toad.h  visitor.h
src/: bull.cpp  dragon.cpp  factory.cpp  main.cpp  npc.cpp  observer.cpp  toad.cpp  visitor.cpp
tests/: testcases.cpp
